修改设计，初步snapshot测试打包

--- a/startup/build.gradle
+++ b/startup/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.library'
 }
 
+apply from: "../upload.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -10,7 +12,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0-3-SNAPSHOT"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
